# icogen

./: .gitattributes  .gitignore  Cargo.toml  DEVELOP.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  build-dist.ps1  build-dist.sh  release.ps1  release.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/icogen/: Cargo.toml
crates/icogen-app/: Cargo.toml  app.rc
crates/icogen-app/src/: gui.rs  main.rs  ui.rs
crates/icogen-assets/: Cargo.toml
crates/icogen-assets-gui/: Cargo.toml  build.rs
crates/icogen-assets-gui/src/: gui.rs  main.rs  ui.rs
crates/icogen-assets/src/: main.rs
crates/icogen-core/: Cargo.toml
crates/icogen-core/src/: lib.rs
crates/icogen-gui/: Cargo.toml
crates/icogen-gui/src/: gui.rs  main.rs  ui.rs
crates/icogen-ui/: Cargo.toml
crates/icogen-ui/src/: assets.rs  color.rs  components.rs  i18n.rs  lib.rs  logo.rs  settings.rs  theme.rs  toolbar.rs  window_state.rs
crates/icogen/src/: main.rs
scripts/: gen-assets.py  icogen_gen.py
