[workspace]
resolver = "2"
members = [
    "crates/icogen-core",
    "crates/icogen",
    "crates/icogen-gui",
    "crates/icogen-assets",
    "crates/icogen-assets-gui",
    "crates/icogen-ui",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
