[package]
name = "icogen-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Combined GPUI frontend for IcoGen: AppIcon.ico and asset PNGs in one window"

[dependencies]
icogen-core = { path = "../icogen-core" }
icogen-ui = { path = "../icogen-ui" }
gpui.workspace = true
gpui_platform.workspace = true
image = "0.25"
rfd = "0.15"
