[package]
name = "icogen-assets"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generate WinUI 3 / Windows App SDK asset PNGs from a square source image"

[dependencies]
icogen-core = { path = "../icogen-core" }
image = { version = "0.25", default-features = false, features = ["png"] }
